--- a/index.html
+++ b/index.html
@@ -4,9 +4,71 @@
 
   <style>
     body{
-      background-color:rgb(214, 240, 248);
+      background-color:rgb(240, 197, 194);
+      display:flex;
+      flex-direction:column;
     }
-    #notes_list{
+    header{
+      background-color: rgb(224, 141, 135);
+      display: flex;
+      position:fixed;
+      top: 0px;
+      flex-direction: column;
+      text-align: center;
+      left: 0px;
+      right: 0px;
+      border-bottom-left-radius: 15px;
+      border-bottom-right-radius: 15px;
+      justify-content: center;
+      align-items: center;
+      justify-content: center;
+      height: 10vh;
+    }
+    header>h1{
+      color:white;
+      font-size: 32px;
+      position: fixed;
+      top: -15px;
+    }
+    header>h4{
+      color:white;
+      background-color: rgb(238, 162, 157);
+      width: 97vw;
+      border-radius:10px;
+      display: flex;
+      justify-content: space-evenly;
+      position: fixed;
+      top: 20px;
+    }
+    input{
+      border-radius: 10px;
+      text-align:center;
+      font-size: 18px;
+    }
+    #inputTab{
+      position:fixed;
+      bottom:0px;
+      background-color:linen;
+      padding: 5px;
+      border-radius:10px;
+    }
+    #spacer{
+      height: 70px;
+    }
+    #listButton{
+      background-color:blue;
+      width:50px;
+      height: 30px;
+      border-radius: 10px;
+      margin: 7px;
+    }
+    #listButton:hover{
+      background-color: lightblue;
+    }
+    #listButton:active{
+      background-color:red;
+    }
+   /* #notes_list{
       display: flex;
     flex-direction: column;
     position: fixed;
@@ -15,24 +77,20 @@
     height: 100vh;
     width: 140px;
     border-right: solid;
-  }
-  #main{
-    margin-left: 150px;
-  }
+  }*/
   .true{
     background-color: rgb(236, 222, 141);
   }
   </style>
-
-
-  <title>someday</title>
+  <title>Someday</title>
 </head>
 <body>
-  <nav id="notes_list">
-  </nav>
   <div id="main">
+    <header>
   <h1>someday</h1>
-  <h4><label>Spending Money<input type="number" id='spending' onkeyup="highLight();"></label></h4>
+  <h4><label>Spending Money<br><input type="number" id='spending' onkeyup="highLight();"></label><div id="listButton">List</div></h4>
+</header>
+<div id="inputTab">
   <input type="text"  placeholder ="Title" id="titleInput">
   <br>
   <input type="number" placeholder= "Cost" id="costInput">
@@ -42,11 +100,14 @@
   <button id ="submit" onclick="submitNotes(notesCollection.length/2)">Middle</button>
   <button id ="submit" onclick="submitNotes(notesCollection.length)">Bottom</button>
   <button id ="delete" onclick="deleteNotes()">Delete All</button>
+</div>
+<div id="spacer"></div>
   <hr>
 
   <div id="testNote"></div>
 </div>
-  <script src= "main.js"></script>
+
 
 </body>
+<script src= "main.js"></script>
 </html>
