--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
         <!-- Top Navbar -->
         <div class="navbar">
           <div class="navbar-inner">
-            <div>
-            <div class="title sliding">someday</div>
-
-          </div>
+            <div class="title right">someday</div>
           </div>
         </div>
         <div class="fab fab-right-top">
@@ -65,9 +62,9 @@
                             <i class="icon demo-list-icon"></i>
                           </div>
                           <div class="item-inner">
-                            <div class="item-title item-floating-label">Name</div>
+                            <div class="item-title item-floating-label">Item</div>
                             <div class="item-input-wrap">
-                              <input type="text" id="titleInput" placeholder="Your name">
+                              <input type="text" id="titleInput" placeholder="Item Name">
                               <span class="input-clear-button"></span>
                             </div>
                           </div>
