--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Top Navbar -->
         <div class="navbar">
           <div class="navbar-inner">
-            <div class="title right">someday</div>
+            <div class="title left">someday</div>
             <div id="spendingContainer">
               <div id="dollar">$</div><input type="number" id='spending' onkeyup="highLight();">
             </div>
@@ -98,9 +98,12 @@
                         </li>
                       </ul>
                     </div>
-
-
+<div id="submitWrapper">
+                    <button id ="submit" class="col button" onclick="submitNotes(0)">Top</button>
+                    <button id ="submit" class="col button" onclick="submitNotes(notesCollection.length/2)">Middle</button>
+                    <button id ="submit" class="col button" onclick="submitNotes(notesCollection.length)">Bottom</button>
                   <button id ="delete" class="col button" onclick="deleteNotes()">Delete All</button>
+                </div>
                 </div>
           </div>
         </div>
