--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="framework7/css/framework7.bundle.min.css">
   <link rel="stylesheet" href="css/icons.css">
   <link rel="stylesheet" href="css/app.css">
-</head>
+    </head>
 <body>
   <div id="app">
     <!-- Status bar overlay for fullscreen mode-->
@@ -37,12 +37,14 @@
         <!-- Top Navbar -->
         <div class="navbar">
           <div class="navbar-inner">
-            <div class="title left">someday</div>
+            <img src="Sunicon1.png" id="AppIcon">
+            <div class="title left">Someday</div>
             <div id="spendingContainer">
               <div id="dollar">$</div><input type="number" id='spending' onkeyup="highLight();">
             </div>
           </div>
         </div>
+        
         <div class="fab fab-right-top">
             <a href="#">
               <!-- First icon is visible when Speed Dial actions are closed -->
@@ -102,15 +104,13 @@
                     <button id ="submit" class="col button" onclick="submitNotes(0)">Top</button>
                     <button id ="submit" class="col button" onclick="submitNotes(notesCollection.length/2)">Middle</button>
                     <button id ="submit" class="col button" onclick="submitNotes(notesCollection.length)">Bottom</button>
-                  <button id ="delete" class="col button" onclick="deleteNotes()">Delete All</button>
                 </div>
                 </div>
           </div>
         </div>
         <!-- Scrollable page content-->
         <div class="page-content">
-            <div id="cardContainer"></div>
-            <div id="infoCard"><p>Welcome to someday</p>Create a list of items organized by priority, with those items most urgent at the top.<p>Once you have some money available to put towards them enter the amount in the top left bubble.</p><p>Im sure you'll get to the bottom of the list someday.</p></div>
+            <div id="cardContainer"></div>  
           </div>
 
         </div>
