Gave buttons borders

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- Toolbar-->
         <div id="addItemBar" class="toolbar toolbar-bottom">
           <div class="toolbar-inner"><div id="buttonWrapper">
-              <button onclick="newButtons();" class="col button">Add Item</button>
+              <button onclick="newButtons();" class="col upButton button">Add Item</button>
             </div>
               <div id="inputTab">
                   <div class="list no-hairlines-md">
@@ -101,9 +101,9 @@
                       </ul>
                     </div>
 <div id="submitWrapper">
-                    <button id ="submit" class="col button" onclick="submitNotes(0)">Top</button>
-                    <button id ="submit" class="col button" onclick="submitNotes(notesCollection.length/2)">Middle</button>
-                    <button id ="submit" class="col button" onclick="submitNotes(notesCollection.length)">Bottom</button>
+                    <button id ="submit" class="col upButton button" onclick="submitNotes(0)">Top</button>
+                    <button id ="submit" class="col upButton button" onclick="submitNotes(notesCollection.length/2)">Middle</button>
+                    <button id ="submit" class="col upButton button" onclick="submitNotes(notesCollection.length)">Bottom</button>
                 </div>
                 </div>
           </div>
