Card body, or item summary test

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                           <div class="item-inner">
                             <div class="item-title item-floating-label">Item</div>
                             <div class="item-input-wrap">
-                              <input type="text" id="titleInput" placeholder="Item Name">
+                              <input type="text" id="titleInput" placeholder="Item Title">
                               <span class="input-clear-button"></span>
                             </div>
                           </div>
