Center button text

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                         </li>
                       </ul>
                     </div>
+                    <div id="addTo">Add to the:</div>
 <div id="submitWrapper">
                     <button id ="submit" class="col upButton button" onclick="submitNotes(0)">Top</button>
                     <button id ="submit" class="col upButton button" onclick="submitNotes(notesCollection.length/2)">Middle</button>
