Added total amount

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <!-- Top Navbar -->
         <div id="spendingContainer">
           <div id="dollar">$</div><input type="number" id='spending' onkeyup="highLight();">
+          <div id="totalCost"></div>
         </div>
         <div class="fab fab-right-top">
             <a href="#">
