--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
         </div>
         <!-- Scrollable page content-->
         <div class="page-content">
-            <div id="cardContainer"></div>  
+          <div style="height: 50px; width: 100vw;"></div>
+            <div id="cardContainer"></div> 
+            <div style="height: 50px; width: 100vw;"></div> 
           </div>
 
         </div>
